Code broke as hell. The crud methods I wrote so far were not really usable, For my interface so I started looking at Jims code. And now I can't even clean or build the project. Super not productive day. Would have been better if I did nothing.

--- a/src/main/webapp/bookCss.css
+++ b/src/main/webapp/bookCss.css
@@ -12,3 +12,7 @@ and open the template in the editor.
    background-color: darkolivegreen;
    color: ghostwhite;
 }
+
+.toolbar {
+    color: white;
+}
