create and read working, Js to populate form for edit delete working, Need to hook edit and delete up to work with controller. Need a cancel button that takes the user back to the Add Div. Add User side validation in the form of an alert to not let nulls into table.

--- a/src/main/webapp/bookCss.css
+++ b/src/main/webapp/bookCss.css
@@ -9,10 +9,28 @@ and open the template in the editor.
 */
 
 .navbar {
-   background-color: darkolivegreen;
    color: ghostwhite;
 }
 
 .toolbar {
     color: white;
+}
+
+#nameInput {
+    color: black;
+}
+
+#name {
+    color: black;
+}
+
+#date {
+    color: black;
+}
+
+.ScrollStyle
+{
+    overflow: visible;
+    max-height: 400px;
+    overflow-y: scroll;
 }
