Crud works. Code is mess ass hell.  Should clean this up before another human sees it.

--- a/src/main/webapp/bookCss.css
+++ b/src/main/webapp/bookCss.css
@@ -12,8 +12,8 @@ and open the template in the editor.
    color: ghostwhite;
 }
 
-.toolbar {
-    color: white;
+.btn{
+    color: black;
 }
 
 #nameInput {
